[package]
name = "mastermind-wasm"
version = "0.1.0"
authors = ["Drew Christensen <emoryandrewchristensen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }

web-sys = { version = "0.3.51", features = ["console"] }

wee_alloc = "0.4.5"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
